# game_test_3D_polygon

./: .gitignore  Cargo.toml  README.md
assets/: cube.glb  cube.mtl  personnage.glb  purple_cube.glb  red_cube.glb
src/: constants.rs  controls.rs  gameloop.rs  gltf_file_loader.rs  lookat_camera.rs  main.rs  maths_vectors_helper.rs  projection.rs  pseudo_shader.rs  rasterizer.rs  shader.rs  transformations.rs  wavefront_parser.rs
