[package]
name = "game_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.2"
image = "0.24.3"
regex = "1"
easy-gltf = "0.1.5"
tokio = { version = "1.20.1", features = ["full"] }

[[bin]]
name = "game_test"
path = "src/main.rs"
